# hemingwix-novel-assistant

./: .env.example  .gitignore  README.md  agent_registry.json  chromadb_setup.py  github_setup_commands.txt  hemingwix_app.py  hemingwix_pro.py  launch_agent.py  postgres_migration.sql  pyproject.toml  simple_app.py
.claude/agents/: agent1-Novelist-in-residence.md  database-research-assistant.md
Application Architecture Plan/: Collaborative Writing Interface - Implementation Plan.md
agents/: README.md  agent_registry.py
agents/novel_writing/: character_development_agent.md  dialogue_specialist_agent.md  plot_structure_agent.md  research_assistant_agent.md
agents/project_management/: content_organization_agent.md  novel_planning_agent.md
agents/technical/: code_review_agent.md  database_design_agent.md  devops_agent.md  mcp_integration_specialist.md
mcp_server/: .env.example  Dockerfile  README.md  config.json  docker-compose.yml  requirements.txt  server.py  setup.py  test_server.py
organized/: database_prep.py
organized/markdown_output/: AI Agents_ Shaping the Future of Storytelling & AI Narrative Design.md  Broken Drill - Outline - v2.md  Chapter 1.md  Chapter 2.md  Chapter 3.md  Chapter 4.md  Chapter 5 .md  Deep Character Research Template.md  Facts for fiction_ Context for the Research Assistant.md  Writing Dialogue_ Context for Dialogue Wizard.md  Writing a Novel_ Context For the Novelist.md  novel_swarm_spec.md  (+5 more)
uploads/: 1f6323e8-1911-4197-8aa9-3f89eb263540.md  219bb2b3-16e3-4cce-9c24-9acdbdeac547.md  244b6156-1c9c-4bd4-9f38-48909cc79517.md
(+2 files in other folders)
